# code-digest

./: .env.template  .gitignore  .gitmodules  Cargo.toml  Justfile  Makefile  README.md  codecov.yml  mise.toml
.github/workflows/: codecov.yml  release.yml
cli_tool/: Cargo.toml
cli_tool/src/: after_long_help.txt  config.rs  file_processor.rs  file_tree.rs  long_about.txt  main.rs
file_system/: Cargo.toml
file_system/src/: lib.rs
language_parsers/: Cargo.toml  build.rs
language_parsers/src/: lib.rs  tree_sitter_parse.rs
output_generator/: Cargo.toml
output_generator/src/: lib.rs
scripts/: notarize.sh  release.sh
ui/: .gitignore  Cargo.toml  package-lock.json  package.json  postcss.config.js  tailwind.config.js
ui/assets/styling/: main.css  tailwind.css
ui/src/: app.rs  main.rs
ui/src/components/: filetree.rs  mod.rs  viewer.rs
