[workspace]
members = [
    "language_parsers",
    "file_system",
    "output_generator",
    "config_manager",
    "cli_tool",
    "ui", "ui",
]

resolver = "3"

# release profile
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
incremental = false

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
