[package]
name = "code-digest"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
file_system = { path = "../file_system" }
glob = "0.3.1"
language_parsers = { path = "../language_parsers" }
once_cell = "1.17.1"
shellexpand = "3.1.0"
thiserror = "1.0.40"

[dev-dependencies]
tempfile = "3.5.0"
