[package]
name = "ui"
version = "0.1.0"
authors = ["Asim Ihsan <ssh@sshemail.ihsan.io>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.3", features = ["fullstack"] }
dioxus-cli-config = "0.6.3"
dioxus-fullstack = "0.6.3"
dioxus-lib = "0.6.2"
tokio = "1.45.0"
axum = "0.7.9"

[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]
